package ejercicios.herencia;

public interface Sistema {
    void agregarEquipo();
}
