package teoria;

public class Modulos {
    /**
     * Los modulos son carpetas en donde se organizan los diversos archivos.
     * Los modulos son tambien llamados paquetes o packages.
     */

    //package <package_name> {<package_content>} -> crear paquete en uml
}
